--- a/0.4.ComprarImpresora3d.md
+++ b/0.4.ComprarImpresora3d.md
@@ -35,7 +35,7 @@ Vamos a ver algunos ejemplos de modelos que a día de hoy tienen una gran fama y
 
 El modelo Creality Ender y su actualizaciones Pro o la versión v2,  han sido un total éxito de ventas la mayoría de los usuarios están muy contentos con su funcionamiento.  El montaje es rápido (2 horas para v1 y 1 hora para la v2) y se obtienen  resultados de bastante calidad. 
 
-La última versión disponible, la v2, se puede montar y calibrar en menos de una hora.  Al ver  que coexisten en el mercado dos versiones distintas nos queda la duda de por qué comprar una impresora antigua si ya existe una mejorada: pues porque podemos encontrar la primera versión a un precio muy, muy competitivo.
+La última versión disponible, la v2, se puede montar y calibrar en menos de una hora.  Al ver  que coexisten en el mercado dos versiones distintas nos queda la duda de por qué comprar una impresora antigua si ya existe una mejorada: pues porque podemos encontrar la primera versión a un precio muy, muy competitivo. Ocurre como en los móviles, que el último  está un poco caro y el anterior es una opción muy buena de precio. Si te da el presupuesto yo me iría  a por la V2 que es excelente.
 
 Se trata de impresora de batalla, capaz de imprimir durante bastantes horas con muy buen funcionamiento.
 
@@ -131,7 +131,16 @@ Personalmente también he comprado en muchas tiendas online como Aliexpress, Ama
 
 Si no tenemos experiencia comprando en estas tiendas conviene saber que a veces nos pueden cobrar además del precio y de los gastos de envío los gastos de aduana que el caso de la impresora al ser paquetes pesados y voluminosos puede ser bastante importantes.
 
-## Cual elegir
+Lo más difícil ¿dónde comprarlas?:
+
+* Si vas a necesitar soporte o quizás tirar de garantía, de cabeza a una tienda nacional. En caso de que la impresora viniera mal desde Aliexpress o similar no hay problema en devolverla, pero es más complejo. Eso sí, vas a tener que pagar IVA y un sobreprecio
+* Si crees que puedes apañarte arreglando alguna cosa, o de hecho piensas cacharrear a fondo, de cabeza a aliexpress o Banggood. Aquí tendrás factura, pero si quieres deducir IVA o imputarse como gastos no va a ser fácil. Ahora hay tiendas que envían desde España o Europa con lo que seguro que no vas a tener que pagar Aduanas y eso sería una pasta.
+* Amazon es una mezcla: pagas más por tener factura pero siguen siendo los mismos vendedores online.
+
+
+Decídete por un par de modelos (yo suelo hacer un ranking) y compara precios/plazos de entrega.
+
+## ¿Cuál elegir?
 
 Resumiendo:
 
@@ -147,5 +156,4 @@ Algo a tener en cuenta cuando vamos a comprar una impresora es el tiempo y la co
 
 Normalmente el precio de un kit inversamente proporcional a su complejidad de montaje es decir los kits más baratos suelen ser más complejos de montar.
 
-Antes de comprar un kit debemos asegurarnos de que tiene una buena documentación y de que vamos a tener un soporte técnico en el caso en el que no podamos completar su montaje
-
+Antes de comprar un kit debemos asegurarnos de que tiene una buena documentación y de que vamos a tener un soporte técnico en el caso en el que no podamos completar su montaje.
