--- a/4.0.1.ComponentesImpresora3D.md
+++ b/4.0.1.ComponentesImpresora3D.md
@@ -64,7 +64,6 @@ A estas placas teníamos que añadir los drivers de los motores paso a paso, que
 
 ![Driver](./images/driver.jpg)
 
-
 Este componentes se calienta, con lo que normalmente incluyen un disipador.
 
 También suelen incluir un potenciómetro para ajustar la cantidad de potencia que transmite al motor.
@@ -73,6 +72,8 @@ De la calidad de los driver depende que el movimiento de nuestra impresora sea m
 
 A esta placa también se conectan los diferentes sensores que miden la temperura en la base y en el fusor y los finales de carrera para posicionar con precisión el extrusor.
 
+![Finales de carrera](./images/FinalesCarrera.jpg)
+
 Un esquema típico de conexión sería el siguiente
 
 ![2](./images/EsquemaImpresora3D.png)
@@ -80,9 +81,11 @@ Un esquema típico de conexión sería el siguiente
 
 #### Electrónica 32 bits
 
+A día de hoy la mayoría de la impresora utilizan una placa de control de 32 bits con una potencia de sobra para manejar la impresora, consiguiente un movimiento mucho mas suave y silencioso de los motores.
+
 Hoy en día existen diferentes tipos de placas cada vez más potentes que además de controlar la impresora no permiten manejar la de una forma mucho más sencilla integrando pantalla de visualización gráfica a color incluso conexiones remotas como puede ser con Wi-Fi.
 
-A día de hoy la mayoría de la impresora utilizan una placa de control de 32 bits con una potencia de sobra para manejar la impresora, consiguiente un movimiento mucho mas suave y silencioso de los motores.
+La mayoría de las impresoras utilizan una placa de control de 32 bits con una potencia de sobra para manejar la impresora, consiguiente un movimiento mucho mas suave y silencioso de los motores.
 
 
 ### Fuente de alimentación
@@ -93,26 +96,51 @@ Suelen estar sobredimensionadas, para garantizar potencia de sobra.
 
 ### Motores
 
-En el 99.99 % de las impresoras se utilizan motores paso a paso para conseguir la precisión necesaria y casi siempre del formato nema17
+En el 99.99 % de las impresoras se utilizan motores paso a paso para conseguir la precisión necesaria y casi siempre del formato nema17:
 
 ![Motor paso a paso Nema17](./images/nema17.jpg)
 
+De la calidad de los motores va a depender la velocidad y la precisión que consigamos en nuestra impresiones.
+
 ### Sensores
 
-También suelen incluir distintos sensores para facilitar tanto los movimientos de la impresora como lo que sería la medida de la temperatura en diferentes puntos interesantes por ejemplo incluye un sensor de temperatura en la base para saber cuál es la temperatura de esta un sensor de temperatura en el extrusor y diversos sensores para garantizar el correcto posicionamiento del extrusor que es la parte más importante
+Las impresoras 3D, como máquinas de precisión que son, también incluyen distintos tipos de sensores para garantizar los movimientos precisos de los motores y  para controlar la temperatura en diferentes puntos. Por ejemplo incluye un sensor de temperatura en la base para saber cuál es su temperatura y otro sensor de temperatura en el fusor. 
 
-En las impresoras de gama más baja se suelen utilizar uno pequeño microinterruptores que actúan como **finales de carrera** es decir que detectan una al menos una de las posiciones de los extremos de los ejes.  De esta forma podemos  conocer con gran precisión al menos uno de loa extremos, si ahora movemos con precisión nuestro extrusor y moviendo hablar con los distintos ejes conseguiremos una mayor precisión
+Para garantizar el perfecto posicionamiento del extrusor se suelen utilizar unos pequeños microinterruptores que actúan como **finales de carrera**, es decir, que detectan al menos una de las posiciones de los extremos de los ejes. De esta forma podemos controlar con gran precisión su posición.
 
 
-Alguna impresora también incluyen **sensores de filamento** que permiten detectar si existe o no filamento, así como el grosor del mismo para conseguir una mayor calidad en la impresión
+Algunas impresoras también incluyen **sensores de filamento** que permiten detectar si existe o no filamento, así como el grosor del mismo para conseguir una mayor calidad en la impresión
+
+
+### Ventiladores
+
+Los ventiladores son los responsables de conseguir un buen enfriamiento del filamento y de todas aquellas partes de la electrónica susceptibles de calentarse durante el funcionamiento.
+
+Podemos encontrar ventiladores en las siguientes partes de una impresora 3D:
+
+* En la fuente de alimentación para evitar calentamiento cuando estamos utilizando la máxima potencia
+* En la caja dónde está la electrónica para conseguir que esta no se sobrecaliente y evitar malfuncionamientos.
+* En la parte del disipador del fusor para conseguir que esta parte del mismo no se sobrecaliente.
+* Apuntando hacia la boquilla para conseguir un enfriamiento rápido del filamento cuando sea necesario.  Es conocido como ventilador de capa.
+
+En la siguiente imagen se puede ver los diferentes ventiladores de un extrusor:
+
+* A izquierda y derecha están los ventiladores de capa.
+* En el centro el ventilador que enfría la parte superior del fusor.
+
+![Ventiladores del extrusor](./images/VentiladoresCapa.jpg)
+
+Algunos de estos ventiladores están funcionando todo el tiempo y son los responsables de la mayor parte del ruido, otros como el ventilador de capa se encienden sólo cuando es necesario.
+
+Algunas impresoras son especialmente ruidosa y podemos mejorar reducir el volumen de su ruido cambiando por unos ventiladores más silenciosos, eso sí, seguro que son más caros que los originales.
 
 
 ### Impresoras más complejas
 
-A medida que se hace más compleja entrenamiento de la impresora incluyendo más motores también se incluyen más sensores para garantizar el correcto funcionamiento por ejemplo si utilizamos un sistema de múltiples herramientas decir la impresora tiene distinto extrusores que puedo utilizar pues necesitaremos de los sensores correspondientes para saber en qué cuál de ellos tenemos colocado y que está correctamente conectado al sistema
+A medida que se hacen más complejo el equipamiento de la impresora, se necesitan más motores y también más sensores para garantizar el correcto funcionamiento. Por ejemplo, si utilizamos un sistema de múltiples cabezales o herramientas, necesitaremos los sensores correspondientes para saber cuál de ellos tenemos colocado y que está correctamente conectado al sistema.
 
-También alguna de las impresoras incluyen sistemas para cambio de filamento es decir son capaces de utilizar distintos filamentos de forma alternativa para ello es necesario conocer con precisión todos estos componentes y cuando el filamento está listo para imprimir
+También algunas de las impresoras incluyen sistemas para cambio de filamento es decir son capaces de utilizar distintos filamentos de forma alternativa para ello es necesario conocer con precisión todos estos componentes y cuando el filamento está listo para imprimir.
 
-
+![Componente multimaterial](./images/redesigned_body.jpg)
 
 
