--- a/4.0.2.TiposExtrusores.md
+++ b/4.0.2.TiposExtrusores.md
@@ -1,61 +1,85 @@
 #   Tipos de extrusores
 
-Tenemo
+La mayoría de las impresoras y extrusores actuales solamente son capaces de trabajar con un filamento al mismo tiempo, aunque cada vez existen más impresoras capaces de trabajar con varios de ellos al mismo tiempo. En este capítulo vamos a tratar sobre aquellos que solamente funcionan con un filamento.
+
+Podemos hacer una primera división  según el extrusor y el fusor estén juntos o  separados y conectados entre sí  por medio de un tubo.  En el primer caso hablaremos de **extrusores directos** y  en el segundo de **extrusores Bowden**. El conducto  que los une habitualmente es de un material conocido como PTFE (teflón).
+
+![Bowden y extrusión directa](./images/extrusor-bowden-vs-directo-1024x633.png)
+
+Cada tipo tiene sus ventajas:
+
+*  En el extrusor Bowden al separar el motor del extrusor del fusor  podemos hacer todo el cabezal de impresión más ligero puesto que el motor del extrusor queda fijo en la estructura y solo necesitamos mover el fusor.  de esta forma conseguimos  una mayor velocidad puesto que es más fácil mover el fusor.
+*  En el extrusor directo, el que extrusor difusor estén juntos hace más sencillo el movimiento del filamento evitándonos atascos y facilitando la impresión de  algunos tipos de filamentos como los elásticos y flexibles.
+
+Como hemos dicho antes vamos a distinguir entre el **extrusor** propiamente dicho, qué es el mecanismo que mueve el filamento, y el **fusor** que es aquella parte donde éste se funde. 
 
 
 ### Tipos de extrusores
 
-Existen diferentes implementaciones del mecanismo de los extrusores
-
-Hablamos de extrusión directa cuando el motor tiene un engranaje que arrastra directamente el filamento de esta forma garantizamos un control muy preciso a cambio necesitamos que el motor tenga una mayor potencia para sierra estar directamente
+Existen muchas implementaciones del mecanismo de los extrusores, una más sencillas y otra más complejas, Cada una de ellas con diferentes ventajas, fortalezas y debilidades.  el objetivo de toda ella es conseguir fundir y depositar la mayor cantidad posible de filamento por segundo,  eso sí manteniendo una alta calidad. 
 
 
-Otros extrusores utilizan un sistema de engranaje que multiplican la fuerza del motor a cambio de conseguir una mayor complejidad pero consiguiendo una buena calidad y funcionamiento con motores muy de mulhouse potencia
+Hablamos de **extrusión directa** cuando el motor tiene un engranaje que arrastra directamente el filamento. De esta forma garantizamos un control muy preciso. A cambio necesitamos que el motor tenga una mayor potencia.
+
+![Extrusor directo](./images/extrusor-1024x791.jpg)
 
 
-## Estructura del extrusor
+Otros extrusores utilizan un sistema de engranajes que multiplican la fuerza del motor a cambio de conseguir una mayor complejidad pero consiguiendo una buena calidad y funcionamiento con motores muy de mulhouse potencia
 
+![Modelo de extrusor Greg](./images/greg_extruder.jpg)
 
-![extrusor](./images/imagen_hotend.jpg)
+Este 2º engranaje tiene firmemente fijado un tornillo (llamado Hobbed Bolt)que dispone de muescas en la zona en la que roza el filamento para conseguir un buen agarre del filamento y así arrastrarlo firmemente.
 
-La parte más sencilla es la **boquilla** (A), en la parte final y no garantiza que el la extrusión del firmamento va a tener un tamaño controlado normalmente están hechas de latón y sufre un gran desgaste en contra de Nenuco podría pensar el plástico fundido la paga estando en necesario cambiar la consideran un elemento fungible
+![](./images/Greg2.jpg)
 
-La parte central del fusor dónde se funde realmente el filamento está formada por una cilindro largo que al mismo tiempo tiene que tener por un extremo una temperatura alta que dónde se produce propiamente la fundición del plástico y por el otro extremo debe tener la temperatura lo más baja posible de ahí que en esta parte se suele incluir unos elementos disipadores para que la temperatura sea baja en la zona adecuada.
-
-La **cabeza calefactora** (B) suele ser un componente un bloque en el que tenemos por un lado un elemento calefactor suele ser una resistencia cerámica que es la responsable de alcanzar la temperatura alta necesaria para fundir el filamento y un sensor que suele ser una resistencia en etc o etc que mide la temperatura con precisión con el fin de ajustar el ciclo de control
-
-Dentro de este cilindro o barrel se suele incluir un tubo de un material conocido como PTFE que tiene una un gran coeficiente de deslizamiento y que permite que el filamento fluya este elemento conocido también como teflón nos permite que el filamento se mueva con facilidad y al mismo tiempo no se adhiera en el caso de que esté fundido
-
-También se considera un elemento fungible y que tenemos que reparar que cambiar cada cierto número de hora de impresión.
-
-Los extrusores suelen incluir en la parte de fuera del disipador un ventilador que contribuye a que la temperatura del esta parte del extrusor sea lo más baja posible
-
-
-### Diámetro de la boquillas
-
-¿cuál usar?
-
-Dependiendo de si queremos extruir mucho plástico o queremos más precisión
-
-## Extrusor i3 Mendel
+Este modelo es conocido como el extrusor i3 Mendel y es el que originalmente llevaba las  primeras impresoras Prusa.  ventaja de que muchas de las piezas son impresas, originalmente era complicado encontrar estos componentes para comprar.
+Extrusor i3 Mendel
 
 ![](./images/Reprap-prusa-I3-Mendel-3D-impresora-de-Wade-de-Greg-engranaje-directo-set-kit-extrusora.jpg_Q90.jpg_.webp)
 
-son complejos
+Son complejos y necesitan de muchas piezas impresas y otros componentes mecánicos.
 
 ![](./images/Reprap-prusa-I3-Mendel-3D-impresora-de-Wade-de-Greg-engranaje-directo-set-kit-extrusora.jpg_Q90.jpg_piezas.webp)
 
-[modelo](https://www.thingiverse.com/thing:961630)
+La gran ventaja es que tenemos disponibles distintos modelos como [éste](https://www.thingiverse.com/thing:961630) y [este](https://www.thingiverse.com/thing:362217) que podemos descargar  para reparar o adaptar.
 
-[modelo 2](https://www.thingiverse.com/thing:362217)
+Todos tienen en común el que utilizan unos muelles para  conseguir una buena tracción del filamento.  habitualmente es necesario ajustar la tensión de estos muelles para evitar un exceso de presión o una falta de  agarre.
 
-![Gref extruder](./images/greg_extruder.jpg)
+![Muelles del extrusor](./images/muellesExtrusorjpeg)
+
+
+## Estructura del fusor
+
+
+
+![Partes del fusor y las diferentes temperaturas de cada una](./images/imagen_hotend.jpg)
+
+La parte más sencilla es la **boquilla**  o nozzle (A), está en la parte final y nos garantiza que la extrusión del filamento va a tener un tamaño controlado. Normalmente están hechas de latón y sufre un gran desgaste. En contra de lo que uno podría pensar, el plástico fundido es capaz de desgastarla, y es necesario cambiarla cada cierto tiempo.
+
+La parte central del fusor está formada por una cilindro largo que tiene que tener al mismo tiempo una temperatura alta por un extremo, que dónde se producirá propiamente la fundición del plástico y por el otro extremo debe tener la temperatura lo más baja posible, para conseguir que el filamento se deslice y no pegue. De ahí que en esta parte se suele incluir unos elementos disipadores y un ventilador para que la temperatura sea baja en la zona adecuada.
+
+La **cabeza calefactora** (B) suele ser un bloque metálico en el que tenemos por un lado un **elemento calefactor** que suele ser una resistencia cerámica y que es la responsable de alcanzar la temperatura alta necesaria para fundir el filamento y un **sensor de temperatura** que suele ser una resistencia PTC que mide la temperatura con precisión con el fin de ajustar el proceso de control de la temperatura de función del filamento.
+
+Dentro de este cilindro o **barrel** se suele incluir un tubo de un material conocido como PTFE que tiene una un gran coeficiente de deslizamiento y que permite que el filamento se deslice con facilidad. Este elemento, conocido también como teflón, nos permite que el filamento se mueva con facilidad y al mismo tiempo no se adhiera en el caso de que esté fundido.
+
+También se considera un elemento fungible y que tenemos que  reemplazar cada cierto número de horas de impresión.
+
+Los fusores suelen incluir en la parte de fuera del disipador un ventilador que contribuye a que la temperatura del esta parte del extrusor sea lo más baja posible
+
+Algo habitual es utilizar boquillas de diferente diámetro, dependiendo de si queremos extruir mucho plástico o queremos más precisión y un mayor detalle
+
+![Boquillas de distinto diámetro](./images/boquillas.jpg)
+
+La diferencia en cuanto a tiempo de impresión y a calidad entre diferentes boquillas es enorme:
+
+![Comparación 0.4 vs 0.8mm](./images/XYZ-Cube-0.4mm-and-0.8mm-Nozzle-and-Their-Settings-Results.jpg)
+
+Aunque la estructura del fusor de la impresora está preparado para cambiar de boquilla con relativa facilidad, es un proceso en el que tenemos que ser muy cuidadosos y no está recomendado si no tenemos cierta experiencia, porque de no hacerlo bien y no ajustarla adecuadamente  podemos dar lugar a atascos.
 
 ## Extrusor barato
 
 ![](./images/extrusor-mk8-de-impresora-3d-04mm-175mm-con-motor-extrusor-y-hotend.jpg)
 
-![](./images/extrusor-1024x791.jpg)
 
 ## Extrusor barato 2
 
@@ -77,11 +101,6 @@ TODO: explicar partes
 ![](./images/extrusorBQ.png)
 
 Extrusor compacto
-
-
-## Bowden
-
-![Bowden y extrusión directa](./images/extrusor-bowden-vs-directo-1024x633.png)
 
 
 
